--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.10.14"
+    "@mui/material": "^5.10.14",
+    "gh-pages": "^4.0.0"
   }
 }
